--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+#Configuration port
+server.port=8081
 
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:@Saputra03}
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:class_nexa_db}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#Configuration Error
+server.error.include-stacktrace=never
+
+#Configuration SuperAdmin
+app.class-nexa.email=${EMAIL:superadmin@gmail.com}
+app.class-nexa.password=${PASSWORD:password}
+
+#Configuration JWT
+app.class-nexa.app-name="class-nexa"
+app.class-nexa.jwt-secret=${JWT_SECRET:secret}
+app.class-nexa.jwt-expirationInSecond=${JWT_EXPIRATION_IN_SECOND:600}
