[FEATURE] add new feature api gmail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,11 @@ app.class-nexa.app-name="class-nexa"
 app.class-nexa.jwt-secret=${JWT_SECRET:secret}
 app.class-nexa.jwt-expirationInSecond=${JWT_EXPIRATION_IN_SECOND:600}
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL:priyqmbido@gmail.com}
+spring.mail.password=${PASSWORD:ltqmmrxiikdlthyy}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
