--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ app.class-nexa.app-name="class-nexa"
 app.class-nexa.jwt-secret=${JWT_SECRET:secret}
 app.class-nexa.jwt-expirationInSecond=${JWT_EXPIRATION_IN_SECOND:60000}
 
+#Configuration email sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${EMAIL:priyqmbido@gmail.com}
