--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,8 @@ spring.mail.password=${PASSWORD:ltqmmrxiikdlthyy}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#Configuration zone time
+spring.jackson.time-zone=Asia/Jakarta
+
 
 
