[IMPROVE] improve feature time zone

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.mail.password=${PASSWORD:ltqmmrxiikdlthyy}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#Configuration zone time
+#Configuration time zone
 spring.jackson.time-zone=Asia/Jakarta
 
 
