[IMPROVE] ready to upload to the server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #Configuration time zone
 spring.jackson.time-zone=Asia/Jakarta
 
+#Configuration Token WhatsApp
+app.class-nexa.token-wa=${TOKEN_WA:XXtVxw50c-1b7ki_@iVz}
+
 
 
